--- a/04_livrable/website/punr/punr_ch01.html
+++ b/04_livrable/website/punr/punr_ch01.html
@@ -89,7 +89,7 @@
                   la préciser et sans rien renier du cheminement lui-même, en retrancher quelques passages.</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e536"><span id="page_6" class="STDgray STDsmall pb">[6]</span>À quoi servent les théories<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
+            <h3 id="d1e583"><span id="page_6" class="STDgray STDsmall pb">[6]</span>À quoi servent les théories<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
             <p class="first">Je ne suis pas un théoricien du roman. J’ai seulement, comme tous les romanciers sans
                doute, aussi bien du passé que du présent, été amené à faire quelques réflexions critiques
                sur les livres que j’avais écrits, sur ceux que je lisais, sur ceux encore que je
@@ -284,7 +284,13 @@
                   en son cœur. Ce noir, là, contre mon pied, ça n'avait par l'ai d'être du noir mais
                   plutôt l'effort confus pour imaginer du noir de quelqu'un qui n'en aurait jamais vu
                   et qui n'aurait pas su s'arrêter, qui aurait imaginé un être ambigu, par-delà les
-                  coueurs.</p>
+                  couleurs. Ça <span class="STDitalic">ressemblait</span> à une couleur mais aussi... à une meurtrissure ou encore à une sécrétion, à un suint&nbsp;—&nbsp;et
+                  à autre chose, à une odeur par exemple, ça se fondait en odeur de terre mouillée,
+                  de bois tiède et mouillé, en odeur noire étendue comme un vernis sur ce bois nerveux,
+                  en saveur de fibre mâchée, sucrée. Je ne le <span class="STDitalic">voyais</span> pas simplement, ce noir&nbsp;: la vue, c'est une invention abstraite, une idée nettoyée,
+                  simplifiée, une idée d'homme. Ce noir-là présence amorphe et veule, débordait, de
+                  loin, la vue, l'odorat et le goût. Mais cette richesse tournait à la confusion et
+                  finalement ça n'était plus rien parce que c'était trop.</p>
                <p class="editor"><span class="STDitalic">La Nausée</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;Folio&nbsp;», [1938] 2009</p>
             </div>
             <div id="sjp_01_14" class="extractHide">
@@ -577,15 +583,42 @@
                   de l'absolu&nbsp;: l'absolu ou l'absurde.</p>
                <p class="editor"><span class="STDitalic">La Nausée</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;Folio&nbsp;», [1938] 2009</p>
             </div>
-            <div id="sjp_01_" class="extractHide">
+            <div id="sjp_02_93" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
-               <p><span class="STDsmall STDgray">[] </span>[...]</p>
-               <p class="editor"><span class="STDitalic">La Nausée</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;Folio&nbsp;», [1938] 2009</p>
+               <p><span class="STDsmall STDgray">[93] </span>[...] Qu'est-ce donc que l'absurde comme état de fait, comme donnée originalle&nbsp;? rien
+                  de moins que le rapport de l'homme au monde. L'absurdité première manifete avant tout
+                  un divorce&nbsp;: le divorce entre les aspirations de l'homme vers l'unité et le dualisme
+                  insurmontable de l'esprit et de la nature, <span class="STDitalic">fini</span> de son existence, entre le «&nbsp;souci&nbsp;» qui est son essence même et la vanité de ses
+                  efforts. La mort, le pluralisme irréductible des vérités et des êtres, l'inintelligibilité
+                  d utrél, le hasard, voilà les pôles de l'absurde. À vrai dire, ce ne sont pas là des
+                  thèmes bien neufs et M.&nbsp;Camus ne les présente pas comme tels. Ils furent dénombrés,
+                  dès le <span class="">xvii</span><span class="STDexposant">e</span> siècle, par une certaine espèce de raison sèche, courte et contemplative qui est
+                  proprement française&nbsp;: ils servirent de lieux communs aux pessimisme classique. N'est-ce
+                  pas Pascal qui insiste sur «&nbsp;le malheur naturel de notre condition faible et mortelle
+                  et si misérable que rien ne peut nous consoler, lorsque nous y pensons de près&nbsp;»&nbsp;?
+                  N'est-ce pas lui qui marque sa place à la raison&nbsp;? n'approuverait-il pas sans réserve
+                  cette phrase de M.&nbsp;Camus&nbsp;: «&nbsp;Le monde n'est ni (tout à fait) rationnel ni à ce que
+                  point irrationnel&nbsp;»&nbsp;? Ne nous montre-t-il pas que la «&nbsp;coutume&nbsp;» et le «&nbsp;divertisse<span class="STDsmall STDgray">[94] </span>ment&nbsp;»  masquent à l'homme «&nbsp;son néant, son abandon, son insuffisance, son impuissance, son
+                  vide&nbsp;»&nbsp;?</p>
+               <p class="editor"><span class="STDitalic">Situations I</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;folio essais&nbsp;», [1947] 2020</p>
             </div>
-            <div id="sjp_01_" class="extractHide">
+            <div id="sjp_02_110" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
-               <p><span class="STDsmall STDgray">[] </span>[...]</p>
-               <p class="editor"><span class="STDitalic">La Nausée</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;Folio&nbsp;», [1938] 2009</p>
+               <p><span class="STDsmall STDgray">[110] </span>[...] Un naturaliste du <span class="">xix</span><span class="STDexposant">e</span> eût écrit&nbsp;: «&nbsp;Un pont enjambait la rivièe.&nbsp;» M.&nbsp;Camus se refuse à cet anthropomorphisme.
+                  Il dira&nbsp;: «&nbsp;Au-dessus de la rivière, il y avait un pont.&nbsp;» Aionsi la chose nous livre-t-elle
+                  tout de suite sa passivité. Elle <span class="STDitalic">est là</span>, simplement, indifférenciée [...]</p>
+               <p class="editor"><span class="STDitalic">Situations I</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;folio essais&nbsp;», [1947] 2020</p>
+            </div>
+            <div id="sjp_02_111" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
+               <p><span class="STDsmall STDgray">[111] </span>[...] Dans ces conditions peut-on parler d'un tout qui serait <span class="STDitalic">le</span> roman de M.&nbsp;Camus&nbsp;? Toutes les phrases de son livre sont équivalentes, comme sont
+                  équivalentes toutes les expériences de l'homme absurde; chacune se pose pour elle-même
+                  et rejette les autres dans le néant; mais, du coup, sauf dans les rares moments où
+                  l'auteur, indifèle à son principe, <span class="STDitalic">fait</span> de la poésie, aucune ne se détache sur le fond des autres. Les dialogues mêmes sont
+                  intégrés au récit&nbsp;: le dialogue, en effet, c'est le moment de l'explication, de la
+                  signification; lui donner une place privilégiée, ce serait admettre que les significations
+                  existent.</p>
+               <p class="editor"><span class="STDitalic">Situations I</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;folio essais&nbsp;», [1947] 2020</p>
             </div>
             <div id="toDefine" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
