--- a/04_livrable/website/punr/punr_ch04.html
+++ b/04_livrable/website/punr/punr_ch04.html
@@ -73,7 +73,7 @@
                   tragédie, aux yeux de Robbe-Grillet, elle aussi périmée.</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e1761"><span id="page_54" class="STDgray STDsmall pb">[54]</span>Nature, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
+            <h3 id="d1e1808"><span id="page_54" class="STDgray STDsmall pb">[54]</span>Nature, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
             <div class="epigraph" onclick="displayExtract('toDefine','2','0',1);">
                <p>La tragédie n’est qu’un moyen de recueillir le malheur humain, de le subsumer, donc
                   de le justifier sous la forme d’une nécessité, d’une sagesse ou d’une purification&nbsp;:
@@ -367,11 +367,11 @@
             <p>L’absurde est donc bien une forme d’humanisme tragique. Ce n’est pas un constat de
                séparation entre l’homme et les choses. C’est une querelle d’amour, qui mène au crime
                passionnel. Le monde est accusé de complicité d’assassinat.</p>
-            <p>Quand <span class="ref">Sartre<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> écrit (dans <span class="STDitalic"><span class="ref">Situations I<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span>) que <span class="STDitalic"><span class="ref">L’Étranger<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span></span><span class="quote" onclick="displayExtract('toDefine','0','0',1);"> «&nbsp;refuse l’anthropomorphisme&nbsp;»</span>, il nous donne, comme le montrent les citations précédentes, une vue incomplète de
-               l’ouvrage. <span class="ref">Sartre<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> a sans doute remarqué ces passages, mais il pense que <span class="ref">Camus<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>, <span class="quote" onclick="displayExtract('toDefine','3','1',1);">«&nbsp;infidèle à son principe, fait de la poésie&nbsp;»</span>. Ne peut-on pas dire, plutôt, que ces métaphores sont justement l’explication du
+            <p>Quand <span class="ref">Sartre<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> écrit (dans <span class="STDitalic"><span class="ref">Situations I<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span>) que <span class="STDitalic"><span class="ref">L’Étranger<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span></span><span class="quote" onclick="displayExtract('sjp_02_110','0','0',1);"> «&nbsp;refuse l’anthropomorphisme&nbsp;»</span>, il nous donne, comme le montrent les citations précédentes, une vue incomplète de
+               l’ouvrage. <span class="ref">Sartre<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> a sans doute remarqué ces passages, mais il pense que <span class="ref">Camus<span class="refinfo">auteur, <span class="Ref0">citation explicite</span>, <span class="Axi0">blâme</span>.</span></span>, <span class="quote" onclick="displayExtract('sjp_02_111','3','0',1);">«&nbsp;infidèle à son principe, fait de la poésie&nbsp;»</span>. Ne peut-on pas dire, plutôt, que ces métaphores sont justement l’explication du
                livre&nbsp;? <span class="ref">Camus<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> ne refuse pas l’anthropomorphisme, il s’en sert avec économie et subtilité, pour
                lui donner plus de poids.</p>
-            <p>Tout est dans l’ordre, puisqu’il s’agit, en fin de compte, ainsi que <span class="ref">Sartre<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> le note, de nous exposer, suivant le mot de <span class="ref">Pascal<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi1">indifférent</span>.</span></span>, <span class="quote" onclick="displayExtract('toDefine','1','0',1);">«&nbsp;le malheur naturel de notre condition&nbsp;»</span>.</p>
+            <p>Tout est dans l’ordre, puisqu’il s’agit, en fin de compte, <span class="quote" onclick="displayExtract('sjp_02_93','3','1',1);">ainsi que Sartre le note</span>, de nous exposer, suivant le mot de <span class="ref">Pascal<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi1">indifférent</span>.</span></span>, <span class="quote" onclick="displayExtract('toDefine','1','0',1);">«&nbsp;le malheur naturel de notre condition&nbsp;»</span>.</p>
             <div class="smallgap"></div>
             <p>Que nous propose maintenant <span class="ref">La Nausée&nbsp;?<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> De toute évidence, il s’agit de relations avec le monde strictement viscérales, écartant
                tout effort de description (déclarée vaine) au profit d’une intimité louche, d’ailleurs
@@ -534,7 +534,7 @@
             <p>Il nous faut opérer avec les moyens du bord. Le regard demeure malgré tout notre meilleure arme, surtout s’il s’en tient aux seules
                lignes. Quant à sa «&nbsp;subjectivité&nbsp;»&nbsp;–&nbsp;principal argument de l’opposition&nbsp;–, que retranche-t-elle à sa valeur&nbsp;? Bien évidemment
                il ne peut s’agir, de toute façon, que du monde tel que l’oriente <span class="STDitalic">mon point de vue&nbsp;;</span> je n’en connaîtrai jamais d’autre. La subjectivité relative de mon regard me sert précisément à définir <span class="STDitalic">ma situation dans le monde.</span> J’évite simplement de concourir, moi-même, à faire de cette situation une servitude.</p>
-            <p><span id="page_82" class="STDgray STDsmall pb">[82]</span>Ainsi Roquentin a beau penser que <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;la vue, c’est une invention abstraite, une idée nettoyée, simplifiée, une idée d’homme&nbsp;»</span>, elle demeure néanmoins, entre le monde et moi, l’opération la plus efficace.</p>
+            <p><span id="page_82" class="STDgray STDsmall pb">[82]</span>Ainsi Roquentin a beau penser que <span class="quote" onclick="displayExtract('sjp_01_186','0','0',1);">«&nbsp;la vue, c’est une invention abstraite, une idée nettoyée, simplifiée, une idée d’homme&nbsp;»</span>, elle demeure néanmoins, entre le monde et moi, l’opération la plus efficace.</p>
             <p>Car c’est d’efficacité qu’il est question ici. Mesurer les distances, sans vain regret,
                sans haine, sans désespoir, entre ce qui est séparé, doit permettre d’identifier ce qui ne l’est pas, ce qui <span class="STDitalic">est un,</span> puisqu’il est faux que tout soit double&nbsp;–&nbsp;faux, ou du moins provisoire. Provisoire
                pour ce qui est de l’homme, voilà notre espoir. Faux, déjà, pour ce qui est des choses&nbsp;:
@@ -612,7 +612,13 @@
                   en son cœur. Ce noir, là, contre mon pied, ça n'avait par l'ai d'être du noir mais
                   plutôt l'effort confus pour imaginer du noir de quelqu'un qui n'en aurait jamais vu
                   et qui n'aurait pas su s'arrêter, qui aurait imaginé un être ambigu, par-delà les
-                  coueurs.</p>
+                  couleurs. Ça <span class="STDitalic">ressemblait</span> à une couleur mais aussi... à une meurtrissure ou encore à une sécrétion, à un suint&nbsp;—&nbsp;et
+                  à autre chose, à une odeur par exemple, ça se fondait en odeur de terre mouillée,
+                  de bois tiède et mouillé, en odeur noire étendue comme un vernis sur ce bois nerveux,
+                  en saveur de fibre mâchée, sucrée. Je ne le <span class="STDitalic">voyais</span> pas simplement, ce noir&nbsp;: la vue, c'est une invention abstraite, une idée nettoyée,
+                  simplifiée, une idée d'homme. Ce noir-là présence amorphe et veule, débordait, de
+                  loin, la vue, l'odorat et le goût. Mais cette richesse tournait à la confusion et
+                  finalement ça n'était plus rien parce que c'était trop.</p>
                <p class="editor"><span class="STDitalic">La Nausée</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;Folio&nbsp;», [1938] 2009</p>
             </div>
             <div id="sjp_01_14" class="extractHide">
@@ -905,15 +911,42 @@
                   de l'absolu&nbsp;: l'absolu ou l'absurde.</p>
                <p class="editor"><span class="STDitalic">La Nausée</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;Folio&nbsp;», [1938] 2009</p>
             </div>
-            <div id="sjp_01_" class="extractHide">
+            <div id="sjp_02_93" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
-               <p><span class="STDsmall STDgray">[] </span>[...]</p>
-               <p class="editor"><span class="STDitalic">La Nausée</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;Folio&nbsp;», [1938] 2009</p>
+               <p><span class="STDsmall STDgray">[93] </span>[...] Qu'est-ce donc que l'absurde comme état de fait, comme donnée originalle&nbsp;? rien
+                  de moins que le rapport de l'homme au monde. L'absurdité première manifete avant tout
+                  un divorce&nbsp;: le divorce entre les aspirations de l'homme vers l'unité et le dualisme
+                  insurmontable de l'esprit et de la nature, <span class="STDitalic">fini</span> de son existence, entre le «&nbsp;souci&nbsp;» qui est son essence même et la vanité de ses
+                  efforts. La mort, le pluralisme irréductible des vérités et des êtres, l'inintelligibilité
+                  d utrél, le hasard, voilà les pôles de l'absurde. À vrai dire, ce ne sont pas là des
+                  thèmes bien neufs et M.&nbsp;Camus ne les présente pas comme tels. Ils furent dénombrés,
+                  dès le <span class="">xvii</span><span class="STDexposant">e</span> siècle, par une certaine espèce de raison sèche, courte et contemplative qui est
+                  proprement française&nbsp;: ils servirent de lieux communs aux pessimisme classique. N'est-ce
+                  pas Pascal qui insiste sur «&nbsp;le malheur naturel de notre condition faible et mortelle
+                  et si misérable que rien ne peut nous consoler, lorsque nous y pensons de près&nbsp;»&nbsp;?
+                  N'est-ce pas lui qui marque sa place à la raison&nbsp;? n'approuverait-il pas sans réserve
+                  cette phrase de M.&nbsp;Camus&nbsp;: «&nbsp;Le monde n'est ni (tout à fait) rationnel ni à ce que
+                  point irrationnel&nbsp;»&nbsp;? Ne nous montre-t-il pas que la «&nbsp;coutume&nbsp;» et le «&nbsp;divertisse<span class="STDsmall STDgray">[94] </span>ment&nbsp;»  masquent à l'homme «&nbsp;son néant, son abandon, son insuffisance, son impuissance, son
+                  vide&nbsp;»&nbsp;?</p>
+               <p class="editor"><span class="STDitalic">Situations I</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;folio essais&nbsp;», [1947] 2020</p>
             </div>
-            <div id="sjp_01_" class="extractHide">
+            <div id="sjp_02_110" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
-               <p><span class="STDsmall STDgray">[] </span>[...]</p>
-               <p class="editor"><span class="STDitalic">La Nausée</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;Folio&nbsp;», [1938] 2009</p>
+               <p><span class="STDsmall STDgray">[110] </span>[...] Un naturaliste du <span class="">xix</span><span class="STDexposant">e</span> eût écrit&nbsp;: «&nbsp;Un pont enjambait la rivièe.&nbsp;» M.&nbsp;Camus se refuse à cet anthropomorphisme.
+                  Il dira&nbsp;: «&nbsp;Au-dessus de la rivière, il y avait un pont.&nbsp;» Aionsi la chose nous livre-t-elle
+                  tout de suite sa passivité. Elle <span class="STDitalic">est là</span>, simplement, indifférenciée [...]</p>
+               <p class="editor"><span class="STDitalic">Situations I</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;folio essais&nbsp;», [1947] 2020</p>
+            </div>
+            <div id="sjp_02_111" class="extractHide">
+               <div class="extract_close" onclick="closeExtract()">X</div>
+               <p><span class="STDsmall STDgray">[111] </span>[...] Dans ces conditions peut-on parler d'un tout qui serait <span class="STDitalic">le</span> roman de M.&nbsp;Camus&nbsp;? Toutes les phrases de son livre sont équivalentes, comme sont
+                  équivalentes toutes les expériences de l'homme absurde; chacune se pose pour elle-même
+                  et rejette les autres dans le néant; mais, du coup, sauf dans les rares moments où
+                  l'auteur, indifèle à son principe, <span class="STDitalic">fait</span> de la poésie, aucune ne se détache sur le fond des autres. Les dialogues mêmes sont
+                  intégrés au récit&nbsp;: le dialogue, en effet, c'est le moment de l'explication, de la
+                  signification; lui donner une place privilégiée, ce serait admettre que les significations
+                  existent.</p>
+               <p class="editor"><span class="STDitalic">Situations I</span>, Sartre Jean-Paul, Paris, Gallimard, coll. «&nbsp;folio essais&nbsp;», [1947] 2020</p>
             </div>
             <div id="toDefine" class="extractHide">
                <div class="extract_close" onclick="closeExtract()">X</div>
