--- a/04_livrable/website/punr/index0.html
+++ b/04_livrable/website/punr/index0.html
@@ -111,6 +111,7 @@
                <li><span class="Axi0">«&nbsp;anti-roman&nbsp;»</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_31">31</a>]</span></li>
                <li><span class="Axi0">«&nbsp;personnage&nbsp;»</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_31">31</a>]</span></li>
                <li><span class="Axi0">«&nbsp;vrai&nbsp;»</span> romancier<span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_31">31</a>]</span></li>
+               <li><span class="Axi0">«&nbsp;il crée des personnages&nbsp;»</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_31">31</a>]</span></li>
                <li>posséder un <span class="Axi0">«&nbsp;caractère&nbsp;»</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_31">31</a>]</span></li>
                <li>culte exclusif de <span class="Axi0">«&nbsp;l’humain&nbsp;»</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_33">33</a>]</span></li>
                <li>une <span class="Axi0">«&nbsp;histoire&nbsp;»</span><span class="STDgray">&nbsp;; [<a target="blanck" href="punr_ch03.html#page_34">34</a>]</span></li>
