--- a/04_livrable/website/punr/index.html
+++ b/04_livrable/website/punr/index.html
@@ -40,7 +40,9 @@
                      					
                      <ol class="chapter_nav" style="list-style:none;">
                         <li><a href="database.html">Illustration de la base de données</a></li>
-                        <li><a href="timeline.html">Chronologie</a></li>
+                        <li><a href="disp.html">Un texte disparate</a></li>
+                        <li><a href="uni.html">L'unicité des articles</a></li>
+                        <li><a href="polemos.html">Un style polémique : des adversaires</a></li>
                         <li><a href="index0.html">Index des notions adverses </a></li>
                         <li><a href="index.html">Index des expressions privilégiées</a></li>
                      </ol>
@@ -72,6 +74,100 @@
                   nous permit de faire remonter l'attribut @type placé sur les éléments &lt;w&gt; sur les
                   éléments &lt;span&gt;.</p>
             </details>
+            <h3>Des dichotomies structurantes</h3>
+            <p>Ces techniques qui servent l'argumentation sont sous-tendues et mises en mouvement
+               par un jeu d'oppositions frontales&nbsp;: et si à chaque proposition des adversaires, il
+               n'y a pas toujours une réponse terme à terme&nbsp;; le lecteur décèle une axiologie sous-jacente
+               qui organise (peut-être plus qu'elle ne résulte de) l'ensemble de la démonstration.
+               Cette axiologie est d'autant plus perceptible que les termes qui la composent sont
+               clairement identifiés.</p>
+            <p>Au sein de <span class="STDitalic">Pour un nouveau roman</span>   les termes qui constituent selon Robbe-Grillet le débat sont l'objet même du débat.
+               Ainsi s'ouvre «&nbsp;Sur quelques notions périmées&nbsp;» à la page&nbsp;29&nbsp;:</p>
+            <p class="STDquote">
+               											La critique traditionnelle a son vocabulaire. Bien qu’elle se défende beaucoup
+               de porter sur la littérature des jugements systématiques (prétendant, au contraire,
+               aimer librement telle ou telle œuvre d’après des critères «&nbsp;naturels&nbsp;»&nbsp;: le bon sens,
+               le cœur, etc.), il suffit de lire avec un peu d’attention ses analyses pour voir aussitôt
+               paraître un réseau de mots-clefs, trahissant bel et bien un système.
+               											
+               											Mais nous sommes tellement habitués à entendre parler de «&nbsp;personnage&nbsp;»,
+               d’«&nbsp;atmosphère&nbsp;», de «&nbsp;forme&nbsp;» et de «&nbsp;contenu&nbsp;», de «&nbsp;message&nbsp;», du «&nbsp;talent de conteur&nbsp;»
+               des «&nbsp;vrais romanciers&nbsp;», qu’il nous faut un effort pour nous dégager de cette toile
+               d’araignée et pour comprendre qu’elle représente une idée sur le roman (idée toute
+               faite, que chacun admet sans discussion, donc idée morte), et point du tout cette
+               prétendue «&nbsp;nature&nbsp;» du roman en quoi l’on voudrait nous faire croire.
+               										</p>
+            <p>Il s'agit également pour Robbe-Grillet de faire accepter à ses adversaires, ou plutôt
+               à ses lecteurs, le fait que ce sont bien les termes qui sont en débat&nbsp;: que «&nbsp;personnage&nbsp;»
+               et «&nbsp;histoire&nbsp;» ne sont pas des évidences. Leur emploi ainsi mis en valeur, le signe
+               est mis en valeur et son emploi impropre souligné par l'argumentaire, comme à la page&nbsp;48&nbsp;:</p>
+            <p class="STDquote">
+               											Il est dès lors normal que l'accusation de «&nbsp;formalisme&nbsp;» soit l'une des
+               plus graves dans la bouche de nos censeurs des deux bords.
+               										</p>
+            <p>Explicité dans la lettre du texte, le procédé est avant tout explicité par des choix
+               stylistiques qui relèvent de la typographie. De manière quasi-systématique, les notions
+               adverses qui se superposent souvent efficacement aux notions périmées, sont encadrées
+               de guillemets, alors que des expressions privilégiées par Robbe-Grillet sont mises
+               en valeur par l'italique.</p>
+            <p>Ce procédé est courant et s'inscrit dans les conventions habituelles des essais, mais
+               chez Robbe-Grillet cet usage prend une place prépondérante et structure l'ensemble
+               du recueil. Nous nous sommes efforcés au sein de notre édition numérique de produire
+               un inventaire sous la forme de deux index de ces notions adverses et expressions privilégiées
+               (reproduits en annexe <span class="STDitalic">infra</span> voir&nbsp;: <a href="#gloss">ici</a>).</p>
+            <p>Notons que l'appréciation «&nbsp;privilégiées&nbsp;» porte bien sur la formulation et non le
+               contenu sémantique&nbsp;: «&nbsp;Aussi le livre n’est-il pas écrit dans un langage [...]. Seuls,
+               en effet, les objets déjà chargés d’un contenu humain flagrant sont neutralisés, avec
+               soin, et <span class="STDitalic">pour des raisons morales</span>&nbsp;» page&nbsp;69, n'est pas privilégié le fait de choisir son style pour des raisons morales
+               mais bien le propos de Robbe-Grillet sur le style de <span class="STDitalic">L'Étranger</span>, et ce, peu importe le statut axiologique de ce style au sein de <span class="STDitalic">Pour un nouveau roman</span> .</p>
+            <p>Précisons que tous les termes entre guillemets ne sont pas nécessairement considérés
+               comme l'une de ces «&nbsp;notions adverses&nbsp;». Les guillemets marquent également les citations
+               extraites d'ouvrages ou de propos fictifs prêtés à des personnages invoqués pour les
+               besoins de l'argumentation (voir <span class="STDitalic">supra</span>&nbsp;: <a href="#histoireDispute">ici</a>). Cependant les notions adverses, mise entre guillemets se superposent bel et bien
+               à des citations, bien qu'il ne fasse aucun doute qu'il s'agit là du propos de l'auteur.
+               Ce dernier insiste sur sa répugnance à les employer et se dégage de la responsabilité
+               de cette partie de l'énoncé.</p>
+            <p>Les uns étant l'exact opposé des autres&nbsp;: les expressions privilégiées sont des signifiants
+               mis en valeur pour leur qualité indépendamment de l'approbation ou non de l'auteur
+               sur leur signifié&nbsp;; les notions adverses sont des signifiants dénigrés au nom d'une
+               relation fautive entre ce signifiant et son signifié (on ne devrait pas dire «&nbsp;l'humain&nbsp;»
+               ou «&nbsp;l'inhumain\footnote{<span class="STDitalic">Op.&nbsp;cit.</span>, p.&nbsp; 56-58&nbsp;» car le propos est faux).</p>
+            <p>Il n'en va pas tout à fait de même pour les termes en italique. En effet, si l'intuition
+               d'origine avait pour origine les mises en valeurs typographiques de certains termes,
+               mis entre guillemets sans être des citations ou mis en italique, il semblait évident
+               que tous les termes entre guillemets ne méritaient pas d'être intégrés en tant que
+               «&nbsp;notions adverses&nbsp;» et tous les termes en italiques en «&nbsp;expressions privilégiées&nbsp;»&nbsp;;
+               certains étaient des citations, d'autres un simple procédé d'emphase.</p>
+            <p>Or, à bien y regarder les expressions privilégiées n'étaient-elles pas toutes des
+               effets d'emphase&nbsp;? Ne voit-on pas plutôt Robbe-Grillet insister sur telle ou telle
+               formulation par opposition à une autre explicitement mentionnée ou non&nbsp;? 
+               										</p>
+            <p>C'est en tout cas ce qui nous est apparu après un examen minutieux. En effet, les
+               expressions privilégiées loin de revêtir l'évidence de concepts nettement définis
+               sont davantage des adjectifs qui changent le sens des termes qui les entourent et
+               font signe vers les concepts d'une philosophie, du moins d'une esthétique qui se définit
+               surtout par son opposition à la métaphysique éculée contre laquelle Robbe-Grillet
+               engage son texte. Ainsi les articles indéfinis «&nbsp;<span class="STDitalic">des</span> questions, et <span class="STDitalic">des</span> réponses&nbsp;» page&nbsp;64, l'adjectif «&nbsp;vrai&nbsp;» pages&nbsp;24 et&nbsp;162 (3&nbsp;fois) et les multiples
+               occurrences du verbe «&nbsp;être&nbsp;» souvent accompagnées de l'adverbe «&nbsp;là&nbsp;» (pages&nbsp;20,
+               21, 177), expressions privilégiées contenant une assertion positive sont-ils parmi
+               les termes les plus courants de la langue française et, seuls, difficilement rattachables
+               à telle ou telle théorie esthétique, si ce n'est à une insistance sur l'immanence
+               opposée à la métaphysique prêtée aux adversaires de Alain&nbsp;Robbe-Grillet . Sans doute
+               la relative banalité des termes mis en avant par la typographie sert-elle la démonstration&nbsp;:
+               l'acceptation difficilement contestable de l'immanence des choses  se trouve aussi
+               dans ce choix typographique qui sert à démontrer avec force que l'évidence, c'est-à-dire
+               le bon sens, est du côté de Robbe-Grillet.</p>
+            <p>De même si les oppositions ne sont pas systématiques (un terme en italique ne répond
+               pas toujours à une expression entre guillemets) le jeu d'opposition est suffisamment
+               soutenu tout au long du recueil pour jouer sur l'implicite et laisser au lecteur le
+               soin d'investir les dichotomies, les faisant siennes au passage. Ainsi l'emploi de
+               l'expression «&nbsp;<span class="STDitalic">vraie</span> ville\footnote{<span class="STDitalic">Op.&nbsp;cit.</span>, p.&nbsp;163&nbsp;» pour désigner Istanbul dans <span class="STDitalic">L'Immortelle</span> induit <span class="STDitalic">via</span> le détour implicite par l'expression antithétique «&nbsp;une <span class="STDitalic">fausse</span> ville&nbsp;», le dénigrement du commentaire des critiques sur la représentation qui en
+               est faite, tant il paraît ridicule qu'Istanbul serait une <span class="STDitalic">fausse</span> ville, <span class="STDitalic">a fortiori</span> dans une œuvre cinématographique.</p>
+            <p>Enfin rappelons que le débat sur les termes semble l'un des enjeux (sinon le seul)
+               du recueil. Ces expressions privilégiées contre des notions adverses induisent un
+               positionnement esthétique profondément inscrit dans son époque, contre Sartre (alors
+               même qu'il reprend certain de ses termes) et pour une mesure de la valeur littéraire
+               en fonction de l'écart qu'une œuvre creuse entre ses principes et ceux de l'habitude.</p>
          </section>
          <section class="index">
             <h2>Index des expressions privilégiées</h2>
