--- a/04_livrable/website/punr/presentation.html
+++ b/04_livrable/website/punr/presentation.html
@@ -40,7 +40,9 @@
                      					
                      <ol class="chapter_nav" style="list-style:none;">
                         <li><a href="database.html">Illustration de la base de données</a></li>
-                        <li><a href="timeline.html">Chronologie</a></li>
+                        <li><a href="disp.html">Un texte disparate</a></li>
+                        <li><a href="uni.html">L'unicité des articles</a></li>
+                        <li><a href="polemos.html">Un style polémique : des adversaires</a></li>
                         <li><a href="index0.html">Index des notions adverses </a></li>
                         <li><a href="index.html">Index des expressions privilégiées</a></li>
                      </ol>
@@ -51,6 +53,35 @@
          </div>
       </header>
       <div class="STDtop"><a href="#top">&lt;</a></div>
+      <h2>Introduction</h2>
+      <p>Constitué par un regroupement de textes publiés au fil des années selon des modalités
+         différentes (tantôt dans des revues spécialisées tantôt dans des journaux généralistes)
+         pour des projets (polémiques ou théoriques) particuliers, <span class="STDitalic">Pour un nouveau roman</span>  est une œuvre composite. Il est constitué de critiques d'ouvrages, pas toujours
+         contemporains, de textes de théorie littéraire voire de métaphysique ou de phénoménologie&nbsp;;
+         cet ouvrage dont on ne perçoit pas toujours l'unité est pourtant loin d'un recueil
+         dans lequel chaque article pourrait se lire indépendamment des autres, réunis par
+         commodité plus que nécessité en un livre unique permettant au grand public de s'approprier
+         les nouveautés de la recherche. En effet quelques fils directeurs traversent et animent
+         les textes&nbsp;: on y trouve des références spécifiques, témoignages d'une époque littéraire,
+         un style polémique, une pensée somme toute entière et constituée&nbsp;; l'œuvre tient par
+         un effort, au demeurant moindre et <span class="STDitalic">a posteriori</span>, d'unification via l'insertion de seuils et les réécritures partielles.</p>
+      <p>Des récriminations contre «&nbsp;les critiques&nbsp;» à un air du temps phénoménologique, critique
+         de la métaphysique classique en passant par une certaine vision du bon-sens, l'œuvre
+         qui se présente comme n'étant pas une théorie du roman semble pourtant (re)tracer
+         une voie à la littérature de son époque. <span class="STDitalic">Pour un nouveau roman</span> , qu'est-ce&nbsp;? Les propos épars d'un relativement jeune auteur tentant d'occuper le
+         terrain et de promouvoir ses textes&nbsp;? Un moment de Robbe-Grillet&nbsp;? Une époque de l'histoire
+         littéraire&nbsp;? Un livret de recommandations (aux publics, aux critiques, aux auteurs)&nbsp;?
+         Ou bel et bien une doctrine littéraire&nbsp;?</p>
+      <p>Si le texte peut être lu comme tout cela à la fois, cela tient sans doute à la complexité
+         d'une pensée faite de recoins. Tentant de maintenir un équilibre délicat entre légitimation
+         par la tradition et refus d'une autre tradition, entre l'affirmation de ce qu'il ne
+         faudrait pas écrire et le refus de délivrer les consignes de la nouvelle école, <span class="STDitalic">Pour un nouveau roman</span>  réfute et emprunte (explicitement ou non) aux modèles et aux adversaires que son
+         auteur s'est choisis. L'habileté tenant à un art consommé de l'ironie et du sous-entendu
+         permettant d'emprunter à ceux-là même que l'on entend discréditer.</p>
+      <p>Déclarant la pleine liberté de l'auteur tout en assénant qu'il ne faudrait plus écrire
+         comme ceci ou comme cela, quelle unité <span class="STDitalic">Pour un nouveau roman</span> &nbsp;? Nous pensons que la pleine compréhension de la manière dont diverses lectures
+         s'imbriquent en un recueil tient à la tenue des fils polémiques et théoriques qui
+         sous-tendent l'ensemble.</p>
       <footer><a href="https://www.univ-lille.fr/" target="blanck"><img src="img/logo_u_lille.png" alt="logo université de lille"></a></footer>
    </body>
 </html>
