--- a/04_livrable/website/punr/punr_ch12.html
+++ b/04_livrable/website/punr/punr_ch12.html
@@ -40,7 +40,9 @@
                      					
                      <ol class="chapter_nav" style="list-style:none;">
                         <li><a href="database.html">Illustration de la base de données</a></li>
-                        <li><a href="timeline.html">Chronologie</a></li>
+                        <li><a href="disp.html">Un texte disparate</a></li>
+                        <li><a href="uni.html">L'unicité des articles</a></li>
+                        <li><a href="polemos.html">Un style polémique : des adversaires</a></li>
                         <li><a href="index0.html">Index des notions adverses </a></li>
                         <li><a href="index.html">Index des expressions privilégiées</a></li>
                      </ol>
